--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "6d06adc1-89cf-4bd0-b06a-4bc34b11e90f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "a2a4b5e6-ec32-4475-a850-af4dcc46689b",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "7710b8f8-3e88-4229-b0ea-fe5064a6baa6",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "d584ba7d-bd64-44bd-84c3-684e4964e502",
    "metadata": {},
    "outputs": [
@@ -85,10 +85,10 @@
       "Answer: Sarah Helen Linton, Deputy State Coroner.\n",
       "\n",
       "Question 2: Who is the deceased?\n",
-      "Answer: Frank Edward Rodier is the deceased.\n",
+      "Answer: Frank Edward Rodier\n",
       "\n",
       "Question 3: What was the cause of death?\n",
-      "Answer: The cause of death remains unascertained. The report states, “his cause of death must remain unascertained.” It does, however, acknowledge the possibility that injuries sustained from the rocks contributed to his death.\n",
+      "Answer: The cause of death remains unascertained. The report states: “Accordingly, his cause of death must remain unascertained.”\n",
       "\n"
      ]
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "90346aed-3080-4e05-a3b9-e5854e6bb146",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
       "\n",
       "--------------------------------------------------\n",
       "Question 2: Who is the deceased?\n",
-      "Answer: Frank Edward Rodier\n",
+      "Answer: Frank Edward Rodier is the deceased.\n",
       "\n",
       "Sources:\n",
       "  Source 1:\n",
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "cd8ccef1-0689-4c01-a0c4-f61bd2a747bc",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "c01de5e5-9fd1-4ba8-807b-5362bee6a246",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a133129c713b433a8b4590fc27c6010e",
+       "model_id": "7884af10a5de468c9ece17ffb91507e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,7 +296,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d1c0a41a4c94010b55e1ef7415a4703",
+       "model_id": "c59edf7aa0b9409b8f62b8ec3b12e1e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -311,7 +311,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "done in 1.11 seconds, 2.71 sentences/sec\n",
+      "done in 0.45 seconds, 6.69 sentences/sec\n",
       "Evaluation Results:\n"
      ]
     },
@@ -463,7 +463,7 @@
     "    'MODEL': [GEN_MODEL] * len(QUESTIONS),\n",
     "    'QUESTION': QUESTIONS,\n",
     "    'CORRECT_ANSWER': CORRECT_ANSWERS,\n",
-    "    'LLM_ANSWER': verbose_answers  # Use verbose answers for evaluation\n",
+    "    'LLM_ANSWER': verbose_answers  \n",
     "}\n",
     "\n",
     "df = pd.DataFrame(data)\n",
@@ -471,7 +471,7 @@
     "\n",
     "# Display the results\n",
     "print(\"Evaluation Results:\")\n",
-    "display(scores_df)  # Use display() for nicer Jupyter output\n",
+    "display(scores_df) \n",
     "\n",
     "# Optional: Save to CSV for reporting\n",
     "scores_df.to_csv('evaluation_results.csv', index=False)\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "80ea2d25-c283-49a2-ac18-11873dce2ad8",
    "metadata": {},
    "outputs": [
@@ -501,6 +501,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a7ede7bf-86ae-47cf-87ac-f145bc609f4b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e02bedf-4a72-4ee1-a0cf-209584294419",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81efa998-2f06-4ea1-9c3e-ffa56573ad79",
    "metadata": {},
    "outputs": [],
    "source": []
